--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": ["react-app", "eslint:recommended"]
   },
   "browserslist": {
     "production": [
