--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"element-react": "^1.4.34",
-		"element-theme-default": "^1.4.13",
-		"react": "^16.9.0",
-		"react-dom": "^16.9.0",
-		"react-scripts": "3.1.2"
+		"@apollo/react-hooks": "^3.1.5",
+		"@craco/craco": "^5.6.4",
+		"antd": "^4.3.5",
+		"apollo-boost": "^0.4.9",
+		"craco-less": "^1.17.0",
+		"final-form": "^4.20.0",
+		"graphql": "^15.1.0",
+		"node-sass": "^4.14.1",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-final-form": "^6.5.0",
+		"react-intl": "^4.6.10",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "3.4.1"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"start": "craco start",
+		"build": "craco build",
+		"test": "craco test",
+		"eject": "craco eject"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -32,8 +42,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"devDependencies": {
-		"react-hot-loader": "^4.12.14"
 	}
 }
