--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
 		"react-dom": "^16.13.1",
 		"react-final-form": "^6.5.0",
 		"react-intl": "^4.6.10",
+		"react-redux": "^7.2.0",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.1"
+		"react-scripts": "3.4.1",
+		"redux": "^4.0.5",
+		"redux-persist": "^6.0.0",
+		"redux-thunk": "^2.3.0"
 	},
 	"scripts": {
 		"start": "craco start",
@@ -28,6 +32,7 @@
 		"eject": "craco eject"
 	},
 	"eslintConfig": {
+		"parser": "babel-eslint",
 		"extends": [
 			"react-app",
 			"eslint:recommended"
@@ -44,5 +49,9 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"babel-eslint": "^10.1.0",
+		"eslint-config-airbnb": "^18.2.0"
 	}
 }
