--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"final-form": "^4.20.0",
 		"graphql": "^15.1.0",
 		"lodash": "^4.17.15",
+		"minio": "^7.0.16",
 		"node-sass": "^4.14.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
@@ -21,6 +22,7 @@
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.1",
+		"react-sizeme": "^2.6.12",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0"
