--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"minio": "^7.0.16",
 		"node-sass": "^4.14.1",
 		"react": "^16.14.0",
+		"react-dnd": "^11.1.3",
+		"react-dnd-html5-backend": "^11.1.3",
 		"react-dom": "^16.13.1",
 		"react-final-form": "^6.5.2",
 		"react-intl": "^5.8.0",
