--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
 		"@ant-design/icons": "^4.2.2",
 		"@apollo/react-hooks": "^4.0.0",
 		"@craco/craco": "^5.7.0",
-		"antd": "^4.8.3",
+		"@planingo/ditto": "^0.1.3",
+		"antd": "^4.12.1",
 		"apollo-boost": "^0.4.9",
+		"craco-babel-loader": "^0.1.4",
 		"craco-less": "^1.17.0",
 		"final-form": "^4.20.0",
 		"graphql": "^15.3.0",
 		"lodash": "^4.17.15",
 		"minio": "^7.0.16",
 		"node-sass": "^4.14.1",
-		"react": "^16.14.0",
+		"react": "^17.0.1",
 		"react-dnd": "^11.1.3",
 		"react-dnd-html5-backend": "^11.1.3",
-		"react-dom": "^16.13.1",
+		"react-dom": "^17.0.1",
 		"react-final-form": "^6.5.2",
 		"react-intl": "^5.8.0",
 		"react-redux": "^7.2.2",
