--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,15 @@ version: 2.1
 orbs:
   discord: antonioned/discord@0.1.0
 
+executors:
+  cypress:
+    docker:
+      # Image primaire utilisée pour lancer les tests
+      - image: cypress/browsers:node14.7.0-chrome84
+        environment:
+          ## this enables colors in the output
+          TERM: xterm
+
 jobs:
   unit-test:
     docker:
@@ -19,14 +28,6 @@ jobs:
             - ~/.config
             - ./node_modules
       - run: yarn test
-  
-  cypress:
-    docker:
-      # Image primaire utilisée pour lancer les tests
-      - image: cypress/browsers:node14.7.0-chrome84
-        environment:
-          ## this enables colors in the output
-          TERM: xterm
 
   e2e-test:
     executor: cypress
