--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
 		"minio": "^7.0.16",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"start-server-and-test": "^1.12.0"
 	},
 	"scripts": {
 		"start": "craco start",
 		"build": "craco build",
 		"test": "craco test",
 		"eject": "craco eject",
-		"e2e": "cypress open",
-		"e2e:ci": "cypress run",
+		"cy:run": "cypress run",
+		"e2e:ci": "start-server-and-test start http://localhost:3030 cy:run",
 		"ci:install": "yarn install --frozen-lockfile --cache-folder ~/.cache/yarn",
 		"deploy": "caprover deploy -h https://captain.caprover.cocaud.dev/ -p ${CAPROVER_PASSWORD} -b master -a planingo"
 	},
