--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
 		"minio": "^7.0.16",
 		"redux": "^4.0.5",
 		"redux-persist": "^6.0.0",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"start-server-and-test": "^1.12.0"
 	},
 	"scripts": {
 		"start": "craco start",
 		"build": "craco build",
 		"test": "craco test",
 		"eject": "craco eject",
+		"cy:run": "cypress run",
+		"e2e:ci": "start-server-and-test start http://localhost:3000 'yarn cy:run'",
+		"ci:install": "yarn install --frozen-lockfile --cache-folder ~/.cache/yarn",
 		"deploy": "caprover deploy -h https://captain.caprover.cocaud.dev/ -p ${CAPROVER_PASSWORD} -b master -a planingo"
 	},
 	"eslintConfig": {
@@ -46,7 +50,7 @@
 	},
 	"devDependencies": {
 		"antd": "^4.12.1",
-		"babel-eslint": "^10.1.0",
+		"babel-eslint": "10.0.3",
 		"eslint-config-airbnb": "^18.2.0",
 		"lodash": "^4.17.15",
 		"node-sass": "^4.0.0",
@@ -59,7 +63,7 @@
 		"react-redux": "^7.2.2",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.3",
+		"react-scripts": "3.4.0",
 		"react-sizeme": "^2.6.12"
 	}
 }
