--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "planingo-front",
-	"version": "0.1.0",
+	"version": "0.1.1",
+	"description": "Planingo front",
 	"private": true,
 	"dependencies": {
 		"@ant-design/icons": "^4.2.2",
@@ -25,7 +26,7 @@
 		"test": "craco test",
 		"eject": "craco eject",
 		"cy:run": "cypress run",
-		"e2e:ci": "start-server-and-test start http://localhost:3000 'yarn cy:run'",
+		"e2e:ci": "start-server-and-test 'yarn start' http://localhost:3000 'yarn cy:run'",
 		"ci:install": "yarn install --frozen-lockfile --cache-folder ~/.cache/yarn",
 		"deploy": "caprover deploy -h https://captain.caprover.cocaud.dev/ -p ${CAPROVER_PASSWORD} -b master -a planingo"
 	},
