--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
 		"@ant-design/icons": "^4.2.2",
 		"@apollo/client": "^3.3.11",
 		"@craco/craco": "^5.9.0",
+		"@fullcalendar/core": "^5.6.0",
+		"@fullcalendar/daygrid": "^5.6.0",
+		"@fullcalendar/interaction": "^5.6.0",
+		"@fullcalendar/list": "^5.6.0",
+		"@fullcalendar/react": "^5.6.0",
+		"@fullcalendar/timegrid": "^5.6.0",
 		"@planingo/ditto": "^0.1.7",
 		"craco-babel-loader": "^0.1.4",
 		"craco-less": "^1.17.0",
