--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"@fullcalendar/list": "^5.6.0",
 		"@fullcalendar/react": "^5.6.0",
 		"@fullcalendar/timegrid": "^5.6.0",
-		"@planingo/ditto": "^0.1.19",
+		"@planingo/ditto": "^0.1.26",
 		"craco-babel-loader": "^0.1.4",
 		"craco-less": "^1.17.0",
 		"cypress": "^6.4.0",
@@ -21,9 +21,11 @@
 		"graphql": "^15.5.0",
 		"minio": "^7.0.16",
 		"redux": "^4.0.5",
+		"redux-form": "^8.3.7",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0",
-		"start-server-and-test": "^1.12.0"
+		"start-server-and-test": "^1.12.0",
+		"use-debounce": "^7.0.0"
 	},
 	"scripts": {
 		"start": "craco start",
